tests/fixtures/pass/allow-nested-src-relative/.chous
in src:
  allow subdir/*.ts
