tests/fixtures/fail/strict-nested/.chous
# Test: Violate strict mode in nested directory
in src:
  strict
  allow *.ts
